[package]
name = "y86-assembler"
version = "0.3.0"
authors = ["Tarik <tarikishaq@hotmail.com>"]
edition = "2018"
description = "A Y86 assembler CLI based on clap"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
lazy_static = "1.4.0"
num-traits = "0.2"
num-derive = "0.3"
y86-lib = "0.1.0"
